--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
   <head>
     <title>Legnine's Github Page</title>
     <style>
+       body {
+  background: black; /* Make it white if you need */
+  color: white;
+  margin: 0;
+  display: flex;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
     </style>
   </head>
   <body>
