--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <html>
   <head>
     <title>Legnine's Github Page</title>
+    <div class="Sussy_baka"
+         <a href="Test Page">https://legnine.github.io/testrepo</a>
+      <h1>Legnine's Github Page</h1>
+    </div>
     <style>
-       body {
-  background: black; /* Make it white if you need */
-  color: white;
-  margin: 0;
-  display: flex;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
-}
+      .Sussy_baka {
+      background: black; /* Make it white if you need */
+      color: #fff;
+      margin: 0;
+      display: flex;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+      }
     </style>
   </head>
   <body>
+    <img src="https://github.com/Legnine/legnine.github.io/assets/images/gamedev.png"/>
   </body>
 </html>
