--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <a href"https://legnine.github.io/emulator">Console Emulator</a> | <a href"https://legnine.github.io/susman">Discord Bot</a>
     
-    <h2>Hi there 👋</h2>h
+    <h2>Hi there 👋</h2>
     <h2>I am Legnine and I am a Roblox game Dev.</h2>
     <h2>I just got bored and partially moved to Github</h2>
     <h3>This website is made for me to teach myself how to code.</h3>
