--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Legnine's Github Page</title>
   </head>
   <body>
-    <a href"https://legnine.github.io/emulator">Console Emulator</a> | <a href"https://legnine.github.io/susman">Discord Bot</a>
+    <a href="https://legnine.github.io/emulator">Console Emulator</a> | <a href="https://legnine.github.io/susman">Discord Bot</a>
     
     <h2>Hi there 👋</h2>
     <h2>I am Legnine and I am a Roblox game Dev.</h2>
